# mise-claude

./: .gitignore  CLAUDE.md  Dockerfile.test  LICENSE  README.md  docker-compose.test.yml  metadata.lua  mise.toml  renovate.json
.github/: VOUCHED.td  security-scan-instructions.md
.github/workflows/: integration.yml  release.yml
claude-env/: Cargo.toml  README.md
claude-env/src/: cli.rs  config.rs  error.rs  lib.rs  lockfile.rs  main.rs  mcp_config.rs  npm.rs  output.rs  registry.rs  resolver.rs
claude-env/src/inspect/: mod.rs  reconciler.rs  renderer.rs  scanner.rs
claude-env/src/installer/: cli_tool.rs  mcp.rs  mod.rs  plugin.rs  skill.rs
claude-env/tests/: integration.rs  unit.rs
claude-env/tests/e2e/: Dockerfile  docker-compose.yml
claude-env/tests/e2e/scenarios/: mcp_install.sh  run_all.sh
claude-env/tests/integration/: full_install_test.rs  inspect_test.rs  install_cli_test.rs  install_plugin_test.rs  install_skill_test.rs  install_test.rs  list_test.rs  remove_test.rs
claude-env/tests/integration/fixtures/: full_config.toml
claude-env/tests/integration/shims/: claude  get-shit-done-cc  npm  npx
claude-env/tests/unit/: config_test.rs  lockfile_test.rs  npm_test.rs  reconciler_test.rs  registry_test.rs  resolver_test.rs  scanner_test.rs
hooks/: backend_exec_env.lua  backend_install.lua  backend_list_versions.lua
kaizen/: tinyexec-shadcn-workaround.md
lib/: aliases.lua  mcp_config.lua  registry.lua  utils.lua
sample/mcp/: .mise.toml  test.sh
sample/plugin/: .mise.toml
sample/skillssh/: .mise.toml  (+1 more)
test/: integration.sh  lib.sh
(+30 files in other folders)
