[package]
name = "claude-env"
version = "0.1.0"
edition = "2021"
description = "Declarative Claude Code environment manager"
license = "MIT"
repository = "https://github.com/komune-io/claude-env"
keywords = ["claude", "mcp", "ai", "tooling"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
toml = "0.8"
ureq = { version = "3", features = ["json"] }

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
tempfile = "3"
